# ondil

./: .gitignore  404.html  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SKTIME_ADAPTER.md  example.ipynb  example_sktime_adapter.py  h --force origin bivariate_copula  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements_tests.txt  test_adapter_simple.py  test_adapter_with_mocks.py  validate_adapter.py
.github/scripts/: contributors.py
.github/workflows/: ci_build_contributors.yml  ci_build_docs.yml  ci_run_tests_deps.yml  ci_run_tests_os.yml  ruff.yml
coordinate_descent/: index.html
design/: additive_models.md  terms.md
development/: index.html
diagnostics/: index.html
distributions/: index.html
docs/: coordinate_descent.md  diagnostics.md  distributions.md  estimators_and_methods.md  index.md  methods.md  model_selection.md  multivariate.md  scaler.md  terms_and_features.md
estimators/: index.html
estimators_and_methods/: index.html
examples/: batch_and_online_estimation.py  diagnostic_tools.py  dv_bivariate_fit.py  estimation_methods.py  multivariate.py  pipeline.py
gram/: index.html
links/: index.html
methods/: index.html
model_selection/: index.html
modeling_tips/: index.html
multivariate/: index.html
scaler/: index.html
search/: search_index.json
src/ondil/: __init__.py  coordinate_descent.py  design_matrix.py  diagnostics.py  error.py  gram.py  incremental_statistics.py  information_criteria.py  logging.py  pipeline.py  robust_math.py  scaler.py  utils.py  validation.py  warnings.py
src/ondil/base/: __init__.py  display.py  distribution.py  estimation_method.py  estimator.py  link.py  terms.py
src/ondil/coordinate_descent/: __init__.py  cd_base.py  cd_linear_constrained.py  utils.py
src/ondil/distributions/: __init__.py  beta.py  betainflated.py  betainflatedzero.py  bicop_clayton.py  bicop_gumbel.py  bicop_normal.py  bicop_studentt.py  exponential.py  gamma.py  gumbel.py  inversegamma.py  inversegaussian.py  johnsonsu.py  logistic.py  lognormal.py  (+19 more)
tests/: test_coordinate_descent.py  test_example.py  test_gram.py  test_import.py  test_link_functions.py  test_online_scaler.py  test_pipeline_update.py  test_sklearn.py  test_sktime_adapter.py
tests/distributions/: test_crps.py  test_derivatives.py  test_dist.py  utils.py
(+46 files in other folders)
