[build-system]
requires = [
    "setuptools>=80.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "ondil"
version = "0.4.6"
authors = [
  {name="Simon Hirsch", email="simon.hirsch@stud.uni-due.de"},
  {name="Jonathan Berrisch", email="jonathan.berrisch@uni-due.de"},
  {name="Florian Ziel", email="florian.ziel@uni-due.de"}
]
description = "Methods for online / incremental estimation of distributional regression models"
readme = "README.md"
requires-python = ">=3.10, <3.14" # Introduce hard cap on python due to numba
license = "GPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Other Audience",
]
dependencies=[
    "scipy >= 1.00, <2.2.0",
    "numpy >= 1.2, <=2.1.0",
    "numba >= 0.59.1, < 1.0.0",
    "scikit-learn >= 1.5",
]

[project.optional-dependencies]
pandas = ["pandas >= 1.20"]
polars = ["polars"]
mpl = ["matplotlib >= 3.7"]
all = ["ondil[pandas, polars, mpl]"]

[dependency-groups]
dev = ["ruff==0.12.4"]

[tool.ruff]
exclude = [
    "__pycache__",
    "build",
    "*.egg-info",
]

[tool.ruff.lint]
preview = true
extend-select = ["E302", "E301", "I"]

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["ondil"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/simon-hirsch/ondil"